[gd_scene load_steps=9 format=3 uid="uid://c2o5bq8pwfgqk"]

[ext_resource type="FontFile" uid="uid://b7uqtstc70wd8" path="res://assets/GrapeSoda.ttf" id="1_2afko"]
[ext_resource type="Script" path="res://scenes/interfaces/game_over/game_over.gd" id="1_ljw15"]
[ext_resource type="PackedScene" uid="uid://l0oouukr5bwn" path="res://scenes/scene_transition/scene_transition.tscn" id="2_0nc2f"]
[ext_resource type="Texture2D" uid="uid://bhd1ejk3hwh4n" path="res://assets/backgrounds/game_over.png" id="3_w2aie"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lng4i"]
texture = ExtResource("3_w2aie")
expand_margin_left = 20.0
modulate_color = Color(0.460347, 0.460347, 0.460347, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyqxv"]
bg_color = Color(0.507384, 0.669107, 0.516096, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 13
shadow_size = 1
shadow_offset = Vector2(0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugb36"]
bg_color = Color(0.161554, 0.258631, 0.0968004, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 13
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkmke"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 13
shadow_size = 1
shadow_offset = Vector2(0, 2)
anti_aliasing = false

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_ljw15")

[node name="SceneTransition" parent="." instance=ExtResource("2_0nc2f")]

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lng4i")

[node name="GameOver" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 17.0
offset_right = 93.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("1_2afko")
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -33.0
offset_right = 37.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="Retry" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_colors/font_hover_pressed_color = Color(0, 0.176471, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0.231931, 0.360225, 0.146435, 1)
theme_override_colors/font_focus_color = Color(0, 0.176471, 0, 1)
theme_override_colors/font_color = Color(0, 0.176471, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_qyqxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_qyqxv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ugb36")
theme_override_styles/normal = SubResource("StyleBoxFlat_hkmke")
text = "Retry"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Retry")
focus_neighbor_bottom = NodePath("../Retry")
theme_override_colors/font_hover_pressed_color = Color(0, 0.176471, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0.988957, 0.988957, 0.988957, 1)
theme_override_colors/font_focus_color = Color(0, 0.176471, 0, 1)
theme_override_colors/font_color = Color(0, 0.176471, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_qyqxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_qyqxv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ugb36")
theme_override_styles/normal = SubResource("StyleBoxFlat_hkmke")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
